--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,11 +27,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  flutter_icons: ^1.1.0
-  page_transition: ^1.1.7+6
-  animated_bottom_navigation_bar: ^0.2.1
-  fl_chart: ^0.12.2
-  percent_indicator: "^2.1.7+2"
+  flutter_font_icons: ^2.2.7
+  page_transition: any
+  animated_bottom_navigation_bar: any
+  fl_chart: ^0.67.0
+  percent_indicator: any
 
 dev_dependencies:
   flutter_test:
